Fix scrollbar height

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ input[type="file"] {
 
 ::-webkit-scrollbar {
   width: 2px;
+  height: 2px;
 }
 
 ::-webkit-scrollbar-track {
